kubernetes/tenants/base/alpha/tenant.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    toolkit.fluxcd.io/tenant: team-alpha
  name: team-alpha-tenant
