kubernetes/tenants/base/alpha/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: team-alpha-external-http
  namespace: team-alpha-tenant
spec:
  gatewayClassName: gke-l7-global-external-managed-mc
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              alpha-team-shared-gateway-access: "true"
      tls:
        mode: Terminate
        options:
          networking.gke.io/pre-shared-certs: alpha-tenant-cert
  addresses:
    - type: NamedAddress
      value: team-alpha-tenant-api
